# libserdes

./: CMakeLists.txt  LICENSE.queue  LICENSE.tinycthread  LICENSE.wingetopt  SerdesConfig.cmake.in
cmake/: Findavro-c.cmake
cmake/modules/: Findavro-c.cmake  Findavro-cpp.cmake
examples/: CMakeLists.txt  kafka-serdes-avro-console-consumer.cpp  kafka-serdes-avro-console-producer.cpp  serdes-kafka-avro-client.c  serdes-tool.cpp
examples/win32/: wingetopt.c
src/: CMakeLists.txt  framing.c  rest.c  serdes-common.h  serdes.h  serdes_int.h
src-cpp/: CMakeLists.txt  serdescpp.h
src/compat/sys/: queue.h
